<resources>
    <string name="app_name">pwo</string>
    <string name="see_rooms">See Rooms</string>
    <string name="addpost">addPost</string>
    <string name="add_post">Add Post</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="room_name">Room Name</string>
    <string name="roomimage">RoomImage</string>
    <string name="username">username</string>
    <string name="name">name</string>
    <string name="createdat">CreatedAt</string>
    <string name="_4">4</string>
    <string name="post_description">description</string>
    <string name="date">Date</string>
    <string name="date_added">Date Added:</string>
    <string name="post_name">Some Weird Name for single post</string>
    <string name="post_description_full">something along the lines of a description would be, something very long. not meaningful in any way. Just a way to fully describe the post of a user</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="backbutton">backbutton</string>
    <string name="logout">logout</string>
    <string name="login">Login</string>
    <string name="roomsy">Roomsy</string>
    <string name="best_place_to_share_ideas">Best place to share ideas</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="welcome_screen">welcome screen</string>
    <string name="logo">logo\n</string>
    <string name="hi_welcome_back">Hi Welcome Back!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="userimage">user_logo\n</string>
    <string name="myPosts">My Posts</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
</resources>