<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SinglePostActivity">

    <ImageView
        android:id="@+id/ivRoomImage"
        android:layout_width="312dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/roomimage"
        app:srcCompat="@drawable/ic_profile" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivRoomImage"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/date"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dateAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivRoomImage"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/tvDate"
        android:text="@string/date_added"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivRoomImage"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/cbLike"
        android:text="@string/username"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivRoomImage"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="0dp"
        android:text="@string/post_name"
        android:textSize="28sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/post_description_full"
        android:textSize="20sp" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbLike"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@+id/ivRoomImage"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="0dp"
        android:button="@null"
        android:checked="false"
        android:drawableEnd="@drawable/heart_selector"
        android:elevation="1dp"
        android:gravity="end|center"
        android:stateListAnimator="@animator/scale"
        android:text="@string/_4"
        android:textAlignment="viewEnd"
        android:textColor="@color/color_grey" />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_navigation_menu" />
</RelativeLayout>