<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#30140B"
    android:padding="16dp">


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="130dp"
        android:backgroundTint="#4D6EA0"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:strokeColor="#6F4242" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="34dp"
        android:layout_toEndOf="@+id/imageView3"
        android:text="@string/roomsy"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="98dp"
        android:backgroundTint="#577D5F"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:strokeColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/best_place_to_share_ideas"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="0dp"
        android:text="@string/let_s_get_started"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="232dp"
        android:layout_height="230dp"
        android:layout_below="@id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="80dp"
        android:contentDescription="@string/welcome_screen"
        app:srcCompat="@drawable/welcome_screen"
        tools:srcCompat="@drawable/welcome_screen" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="35dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

</RelativeLayout>
