<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#30140B">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/etUsername"
            android:autofillHints="username"
            android:layout_width="371dp"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/shape"
            android:imeOptions="actionNext"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <EditText
            android:id="@+id/etEmail"
            android:maxLines="1"
            android:autofillHints="emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUsername"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/shape"
            android:imeOptions="actionNext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:maxLines="1"
            android:autofillHints="password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/shape"
            android:imeOptions="actionNext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:textColor="#FF0000"
            android:visibility="gone"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#30140B"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FDA214"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:strokeColor="#FFFFFF" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="324dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:text="@string/create_an_account"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/already_have_an_account"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sign_in"
        android:textColor="#F79D13"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/backbutton"
        android:layout_width="32dp"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />


</androidx.constraintlayout.widget.ConstraintLayout>