<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity"
    android:background="#30140B">

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profile"
        android:textSize="32sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/user_logo" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@+id/profile"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/imageView4"
        android:text="@string/username"
        android:textSize="24sp"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsername"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/imageView4"
        android:text="@string/email"
        android:textSize="24sp"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-59dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/logout"
        android:textColor="#ffffff"
        app:strokeColor="#FFFFFF"
        app:cornerRadius="0dp"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@+id/tvEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:text="@string/myPosts"
        android:textSize="24sp"
        android:textColor="#ffffff" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="-5dp"
        android:layout_marginEnd="-5dp"
        android:paddingTop="7dp"
        android:background="@drawable/default_menu_bg"
        app:menu="@menu/bottom_navigation_menu"
        app:itemTextColor="#FFFFFF"
        app:itemIconTint="#FFFFFF"
        app:labelVisibilityMode="unlabeled" />
</RelativeLayout>