<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#30140B"
    tools:context=".activities.AddPostActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/title"
        android:textSize="26sp"
        android:id="@+id/tvTitle"

        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/PostTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:autofillHints="title"
        android:background="@drawable/default_bg"
        android:hint="@string/title"
        android:inputType="textMultiLine"
        android:minHeight="32dp"
        android:padding="6dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PostTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/description"
        android:textSize="26sp"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/PostDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescription"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="description"
        android:background="@drawable/default_bg"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minHeight="200dp"
        android:textColor="#FFFFFF"
        android:padding="6dp"
        android:textColorHint="#FFFFFF"
        />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAddPost"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnAddPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PostDescription"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="120dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/post"
        android:textColor="#FFFFFF"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp"
        app:cornerRadius="15dp"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="-5dp"
        android:background="@drawable/default_menu_bg"
        android:paddingTop="7dp"
        app:itemIconTint="#FFFFFF"
        app:itemTextColor="#FFFFFF"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_navigation_menu"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>